[gd_scene load_steps=12 format=3 uid="uid://cd1j07e7q6brg"]

[ext_resource type="Script" uid="uid://bivr0ttbslpuh" path="res://scripts/main_menu.gd" id="1_l6cm7"]
[ext_resource type="Script" uid="uid://bsrcg430hwe4o" path="res://scripts/high_scores.gd" id="2_bqqt6"]
[ext_resource type="Texture2D" uid="uid://xdfqa8al2epl" path="res://icon.svg" id="2_ekxnf"]
[ext_resource type="Script" uid="uid://cfo8gpnkyjasq" path="res://scripts/nickname_edit.gd" id="3_wu84c"]

[sub_resource type="SystemFont" id="SystemFont_bqqt6"]
font_names = PackedStringArray("Impact")
generate_mipmaps = true
subpixel_positioning = 0

[sub_resource type="SystemFont" id="SystemFont_8ln24"]
font_names = PackedStringArray("Impact")
subpixel_positioning = 0

[sub_resource type="Theme" id="Theme_rtw2f"]
default_font = SubResource("SystemFont_8ln24")
Label/constants/outline_size = 24
Label/font_sizes/font_size = 64

[sub_resource type="SystemFont" id="SystemFont_l6cm7"]
font_names = PackedStringArray("Impact")
subpixel_positioning = 0

[sub_resource type="SystemFont" id="SystemFont_rtw2f"]
font_names = PackedStringArray("Impact")
subpixel_positioning = 0

[sub_resource type="Theme" id="Theme_oa1go"]
LineEdit/constants/outline_size = 24
LineEdit/font_sizes/font_size = 64
LineEdit/fonts/font = SubResource("SystemFont_rtw2f")

[sub_resource type="SystemFont" id="SystemFont_wu84c"]
font_names = PackedStringArray("Impact")
subpixel_positioning = 0

[node name="MainMenu" type="CanvasLayer"]
script = ExtResource("1_l6cm7")

[node name="Menu" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -720.0
offset_right = -720.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Menu"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 64.0
offset_right = -64.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 96
alignment = 1

[node name="btn_play" type="Button" parent="Menu/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 36
theme_override_fonts/font = SubResource("SystemFont_bqqt6")
theme_override_font_sizes/font_size = 120
text = "Play"

[node name="btn_settings" type="Button" parent="Menu/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 36
theme_override_fonts/font = SubResource("SystemFont_bqqt6")
theme_override_font_sizes/font_size = 120
text = "Settings"

[node name="btn_highscores" type="Button" parent="Menu/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 36
theme_override_fonts/font = SubResource("SystemFont_bqqt6")
theme_override_font_sizes/font_size = 120
text = "Highscores"

[node name="HighScores" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -720.0
offset_right = -720.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_bqqt6")

[node name="CenterContainer" type="CenterContainer" parent="HighScores"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="score_list" type="GridContainer" parent="HighScores/CenterContainer"]
custom_minimum_size = Vector2(640, 0)
layout_mode = 2
columns = 2

[node name="name" type="Label" parent="HighScores/CenterContainer/score_list"]
layout_mode = 2
size_flags_horizontal = 3
theme = SubResource("Theme_rtw2f")
text = "my name"

[node name="score" type="Label" parent="HighScores/CenterContainer/score_list"]
layout_mode = 2
size_flags_horizontal = 3
theme = SubResource("Theme_rtw2f")
text = "score"
horizontal_alignment = 2

[node name="btn_back" type="Button" parent="HighScores"]
custom_minimum_size = Vector2(180, 180)
layout_mode = 1
anchors_preset = -1
offset_left = 50.0
offset_top = 50.0
offset_right = 230.0
offset_bottom = 230.0
theme_override_constants/outline_size = 48
theme_override_fonts/font = SubResource("SystemFont_l6cm7")
theme_override_font_sizes/font_size = 128
text = "<"

[node name="Settings" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CenterContainer" type="CenterContainer" parent="Settings"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Settings/CenterContainer"]
layout_mode = 2

[node name="NicknameEdit" type="LineEdit" parent="Settings/CenterContainer/VBoxContainer"]
layout_mode = 2
focus_mode = 1
theme = SubResource("Theme_oa1go")
placeholder_text = "Name"
alignment = 1
max_length = 10
script = ExtResource("3_wu84c")

[node name="HBoxContainer" type="HBoxContainer" parent="Settings/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 100

[node name="btn_left" type="Button" parent="Settings/CenterContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(90, 0)
layout_mode = 2
theme_override_constants/outline_size = 36
theme_override_fonts/font = SubResource("SystemFont_wu84c")
theme_override_font_sizes/font_size = 128
text = "<"

[node name="Sprite" type="TextureRect" parent="Settings/CenterContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
texture = ExtResource("2_ekxnf")
expand_mode = 2

[node name="btn_right" type="Button" parent="Settings/CenterContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(90, 0)
layout_mode = 2
theme_override_constants/outline_size = 36
theme_override_fonts/font = SubResource("SystemFont_wu84c")
theme_override_font_sizes/font_size = 128
text = ">"

[node name="btn_back" type="Button" parent="Settings"]
custom_minimum_size = Vector2(180, 180)
layout_mode = 1
anchors_preset = -1
offset_left = 50.0
offset_top = 50.0
offset_right = 230.0
offset_bottom = 230.0
theme_override_constants/outline_size = 48
theme_override_fonts/font = SubResource("SystemFont_l6cm7")
theme_override_font_sizes/font_size = 128
text = "<"

[connection signal="pressed" from="Menu/VBoxContainer/btn_settings" to="." method="_on_btn_settings_pressed"]
[connection signal="pressed" from="Menu/VBoxContainer/btn_highscores" to="." method="_on_btn_highscores_pressed"]
[connection signal="pressed" from="HighScores/btn_back" to="." method="_on_btn_back_pressed"]
[connection signal="pressed" from="Settings/btn_back" to="." method="_on_btn_back_pressed"]
